; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_utfconv.c_unicode_decompose.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/vfs/extr_vfs_utfconv.c_unicode_decompose.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HANGUL_SBASE = common dso_local global i32 0, align 4
@HANGUL_SCOUNT = common dso_local global i32 0, align 4
@HANGUL_TCOUNT = common dso_local global i32 0, align 4
@HANGUL_NCOUNT = common dso_local global i32 0, align 4
@HANGUL_LBASE = common dso_local global i64 0, align 8
@HANGUL_VBASE = common dso_local global i64 0, align 8
@HANGUL_TBASE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @unicode_decompose to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @unicode_decompose(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @HANGUL_SBASE, align 4
  %9 = icmp sge i32 %7, %8
  br i1 %9, label %10, label %57

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @HANGUL_SBASE, align 4
  %13 = load i32, i32* @HANGUL_SCOUNT, align 4
  %14 = add nsw i32 %12, %13
  %15 = icmp sle i32 %11, %14
  br i1 %15, label %16, label %57

16:                                               ; preds = %10
  %17 = load i32, i32* @HANGUL_SBASE, align 4
  %18 = load i32, i32* %4, align 4
  %19 = sub nsw i32 %18, %17
  store i32 %19, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @HANGUL_TCOUNT, align 4
  %22 = srem i32 %20, %21
  %23 = icmp ne i32 %22, 0
  %24 = zext i1 %23 to i64
  %25 = select i1 %23, i32 3, i32 2
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* %4, align 4
  %27 = load i32, i32* @HANGUL_NCOUNT, align 4
  %28 = sdiv i32 %26, %27
  %29 = sext i32 %28 to i64
  %30 = load i64, i64* @HANGUL_LBASE, align 8
  %31 = add nsw i64 %29, %30
  %32 = trunc i64 %31 to i32
  %33 = load i32*, i32** %5, align 8
  %34 = getelementptr inbounds i32, i32* %33, i32 1
  store i32* %34, i32** %5, align 8
  store i32 %32, i32* %33, align 4
  %35 = load i32, i32* %4, align 4
  %36 = load i32, i32* @HANGUL_NCOUNT, align 4
  %37 = srem i32 %35, %36
  %38 = load i32, i32* @HANGUL_TCOUNT, align 4
  %39 = sdiv i32 %37, %38
  %40 = sext i32 %39 to i64
  %41 = load i64, i64* @HANGUL_VBASE, align 8
  %42 = add nsw i64 %40, %41
  %43 = trunc i64 %42 to i32
  %44 = load i32*, i32** %5, align 8
  %45 = getelementptr inbounds i32, i32* %44, i32 1
  store i32* %45, i32** %5, align 8
  store i32 %43, i32* %44, align 4
  %46 = load i32, i32* %6, align 4
  %47 = icmp sgt i32 %46, 2
  br i1 %47, label %48, label %55

48:                                               ; preds = %16
  %49 = load i32, i32* %4, align 4
  %50 = load i32, i32* @HANGUL_TCOUNT, align 4
  %51 = srem i32 %49, %50
  %52 = load i32, i32* @HANGUL_TBASE, align 4
  %53 = add nsw i32 %51, %52
  %54 = load i32*, i32** %5, align 8
  store i32 %53, i32* %54, align 4
  br label %55

55:                                               ; preds = %48, %16
  %56 = load i32, i32* %6, align 4
  store i32 %56, i32* %3, align 4
  br label %61

57:                                               ; preds = %10, %2
  %58 = load i32, i32* %4, align 4
  %59 = load i32*, i32** %5, align 8
  %60 = call i32 @unicode_recursive_decompose(i32 %58, i32* %59)
  store i32 %60, i32* %3, align 4
  br label %61

61:                                               ; preds = %57, %55
  %62 = load i32, i32* %3, align 4
  ret i32 %62
}

declare dso_local i32 @unicode_recursive_decompose(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
